    Specify, e.g., "ref" instead of "ref*" to keep generating hyperlinks.

    .. _reference-label: docs/user/config.html#reference-label

* "null" writer: output will change to the empty string
  in Docutils 0.22.

* "manpage" writer:

  - No more changing case in to uppercase, leave it to the source.

Misc
----

* Remove `parsers.rst.directives.CSVTable.HeaderDialect`
  in Docutils 0.22.

* Remove the "rawsource" argument from `nodes.Text.__init__()`
  in Docutils 2.0.

* Remove the deprecated attributes `nodes.Element.known_attributes`,
  `nodes.Element.basic_attributes`, and `nodes.Element.local_attributes`,
  in Docutils 2.0.

* Drop support for `old-format configuration files`_ in Docutils 2.0.

* Remove the ``--html-writer`` option of the `buildhtml.py`_ application
  (obsoleted by the `"writer" setting`_ since Docutils 0.18)
  in Docutils 2.0.

* Revise the `String I/O`__ interface used by the `publish_string()`
  and `publish_from_doctree()` publisher convenience functions.
  (In Python 3, name and behaviour no longer match.)

  __ docs/api/publisher.html#string-i-o

* Move math format conversion from docutils/utils/math (called from
  docutils/writers/_html_base.py) to a transform__.

  __ docs/ref/transforms.html

* Remove mistranslated localizations of the "admonition" directive name in
  Docutils 0.22.

  Use the English term, matching translations introduced in Docutils 0.21,
  or specific admonitions instead of "aanmaning" (nl),
  "admonition" (fr), "ammonizione" (it), "ermahnung" (de),
  "exhortación" (es), "formaning" (da), "sciigo" (eo),
  "upomnienie" (pl), "vermaning" (af),
  to avoid errors in future conversions.

.. _front end tools: docs/user/tools.html
.. _input_encoding: docs/user/config.html#input-encoding
.. _math_output: docs/user/config.html#math-output
.. _UTF-8 mode: https://docs.python.org/3/library/os.html#utf8-mode
.. _image_loading: docs/user/config.html#image-loading
.. _old-format configuration files: